add a few services

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class='navbar-brand'>Recipe Book</a>
+      <a href="#" class='navbar-brand'>Podgryzek</a>
     </div>
     <div class="navbar-default">
       <ul class="nav navbar-nav">
-        <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
-        <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
+        <li><a href="#" (click)="onSelect('recipe')">Przepisy</a></li>
+        <li><a href="#" (click)="onSelect('shopping-list')">Lista zakupów</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class='dropdown-toggle' role='button'>Manage <span class="caret"></span></a>
+        <li class="dropdown" appDropdown>
+          <a href="#" class='dropdown-toggle' role='button'>Zarządzaj<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Save Data</a></li>
             <li><a href="#">Fetch Data</a></li>
