--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -3,19 +3,19 @@
     <form>
       <div class="row">
         <div class="col-sm-5 form-group">
-          <label for="name">Name</label>
+          <label for="name">Nazwa produktu:</label>
           <input type="text" id='name' class='form-control' #nameInput>
         </div>
         <div class="col-sm-2 form-group">
-          <label for="amount">Amount</label>
+          <label for="amount">Ilość:</label>
           <input type="number" id='amount' class='form-control' #amountInput>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type='submit' (click)="onAddItem()">Add</button>
-          <button class="btn btn-danger" type='button'>Delete</button>
-          <button class="btn btn-primary" type='button'>Clear</button>
+          <button class="btn btn-success" type='submit' (click)="onAddItem()">Dodaj</button>
+          <button class="btn btn-danger" type='button'>Usuń</button>
+          <button class="btn btn-primary" type='button'>Wyczyść</button>
         </div>
       </div>
     </form>
