add observable and routing

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class='navbar-brand'>Podgryzek</a>
+      <a routerLink="/" class='navbar-brand'>Podgryzek</a>
     </div>
     <div class="navbar-default">
       <ul class="nav navbar-nav">
-        <li><a href="#" (click)="onSelect('recipe')">Przepisy</a></li>
-        <li><a href="#" (click)="onSelect('shopping-list')">Lista zakupów</a></li>
+        <li routerLinkActive="active"><a routerLink="/recipes">Przepisy</a></li>
+        <li routerLinkActive="active"><a routerLink="/shopping-list">Lista zakupów</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a href="#" class='dropdown-toggle' role='button'>Zarządzaj<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+          <a class='dropdown-toggle' role='button'>Zarządzaj<span class="caret"></span></a>
+          <ul class="dropdown-menu" style="cursor: pointer">
+            <li><a>Save Data</a></li>
+            <li><a>Fetch Data</a></li>
           </ul>
         </li>
       </ul>
