--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,10 +15,10 @@
         Manage Recipe
         <span class='caret'></span>
       </button>
-      <ul class='dropdown-menu'>
-        <li><a style="cursor: pointer" (click)="onAddToShoppingList()">Add Ingredients to Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+      <ul class='dropdown-menu' style="cursor: pointer">
+        <li><a (click)="onAddToShoppingList()">Add Ingredients to Shopping List</a></li>
+        <li><a (click)="onEditRecipe()">Edit Recipe</a></li>
+        <li><a>Delete Recipe</a></li>
       </ul>
     </div>
   </div>
